sampler/chain/projects/jadx/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/utils/BlockUtils.java:275: error: [NullAway] (INDEX= 260) (Covered) returning @Nullable expression from method with @NonNull return type
		return null;
		^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/visitors/typeinference/TypeUpdate.java:381: error: [NullAway] (INDEX= 101) (Covered) returning @Nullable expression from method with @NonNull return type
				return null;
				^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/instructions/args/ArgType.java:612: error: [NullAway] (INDEX= 64) (Covered) returning @Nullable expression from method with @NonNull return type
		return null;
		^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/xmlgen/BinaryXMLParser.java:80: error: [NullAway] (INDEX= 198) (Covered) assigning @Nullable expression to @NonNull field
		nsMap = null;
		      ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/info/ClassInfo.java:137: error: [NullAway] (INDEX= 118) (Covered) assigning @Nullable expression to @NonNull field
			pkg = null;
			    ^
	(see http://t.uber.com/nullaway )
